Adding the logo of the website to the sidebar

--- a/FE/home.html
+++ b/FE/home.html
@@ -12,6 +12,15 @@
     <title>Really Social</title>
 </head>
 <body>
+    <div class="sidebar">
+
+        <a href="#" class="logo">
+            <div class="logo_img">
+                <img src="logo_name.png" alt="">
+            </div>
+        </a>
+        
+    </div>
     <script src="social.js"></script>
 </body>
 </html>
